[package]
name = "caesium"
version = "0.1.0"
authors = ["zomatree <angelokontaxis@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.5", features = ["full"] }
tokio-tungstenite = "0.11.0"